updating index file

--- a/index.html
+++ b/index.html
@@ -14268,6 +14268,7 @@ a.anchor-link {
 <p><strong>Introduction</strong></p>
 <p>Hello! This Data Science tutorial aims to guide you through all of the phases of the Data Science Pipeline. This will include Data Collection/Curation, Data Management/Representation, Exploratory Data Analysis, Hypothesis Testing and Machine Learning, Communication of Insights Attained.</p>
 <p>In this tutorial we used the data containing the Top 1000 Streamers on Twitch from Aayush Mishra on Kaggle (<a href="https://www.kaggle.com/aayushmishra1512/twitchdata">https://www.kaggle.com/aayushmishra1512/twitchdata</a>).</p>
+<p>The motivation behind this tutorial is to find out what influences average viewership the most. With this knowledge streamers could identify what metric they need to focus on the most to grow their channel.</p>
 
 </div>
 </div>
